# cmsc423fall2022

./: .gitignore  README.md
CMSC423_F22_A0/: Cargo.toml  README.md  build.sh
CMSC423_F22_A0/src/: main.rs
CMSC423_F22_A1/: Cargo.toml  README.md  build.sh
CMSC423_F22_A1/src/: main.rs  scsbler.rs
CMSC423_F22_A1_wrk/: Cargo.toml  README.md
CMSC423_F22_A2/: Cargo.toml  build.sh
CMSC423_F22_A2/src/: inspectsa.rs  querysa.rs
CMSC423_F22_A2_wrk/: output  output_query  output_query_comptweak  output_query_simpeaccel
CMSC423_F22_A2_wrk/sample_data/: genome_small.fa  genome_small_trunc.fa  reads1.fa  reads2.fa
CMSC423_F22_A2_wrk/sample_output/: sars_cov2_sa_64.stat  sars_read1.naive.map  sars_read1.simpleaccel.map
CMSC423_F22_A2_wrk/src/: bkup.txt  main.rs  querysa.rs
CMSC423_F22_A3/: Cargo.toml  build.sh
CMSC423_F22_A3/src/: inspectfm.rs  queryfm.rs
CMSC423_F22_A3_wrk/: queryfm_out  queryfm_partial_out
CMSC423_F22_A3_wrk/sample_input/: sample_reads_trunc.fa
CMSC423_F22_A3_wrk/sample_output/: megavirus_s128.samp.txt:Zone.Identifier  sample_mapping_complete.tsv  sample_mapping_partial.tsv
CMSC423_F22_A3_wrk/src/: bkup.txt  main.rs  queryfm.rs
CMSC423_F22_A4/: Cargo.toml  build.sh  readme.md
CMSC423_F22_A4/src/: main.rs
CMSC423_F22_A4_wrk/: Cargo.toml
CMSC423_F22_A4_wrk/test_input/: fitting.sp  fitting_trunc.sp  global.sp  global_trunc.sp
CMSC423_F22_A4_wrk/test_output/: fitting.results  global.results
CMSC423_F22_A5/: Cargo.toml  Readme.md  build.sh
CMSC423_F22_A5/src/: main.rs  picomap.rs
CMSC423_F22_A5_wrk/: Cargo.toml  omiindex  output  output1  output_omi
CMSC423_F22_A5_wrk/src/: main.rs  picomap.rs
CMSC423_F22_A5_wrk/test_input/: megavirus.fa  megavirus_read.fa  omicro_reads.fa  (+3 more)
(+6 files in other folders)
