[package]
name = "export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randsim"
path = "src/main.rs"

[[bin]]
name = "scsbler"
path = "src/scsbler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
json = "0.12.4"
priority-queue = "1.2.3"