[package]
name = "CMSC423_F22_A3_wrk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buildfm"
path = "src/main.rs"

[[bin]]
name = "inspectfm"
path = "src/inspectfm.rs"

[[bin]]
name = "queryfm"
path = "src/queryfm.rs"

[dependencies]
serde = {version = "1.0.145", features = ["derive"]} 
bincode = "1.2.1"