[package]
name = "CMSC423_F22_A5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "picoindex"
path = "src/main.rs"

[[bin]]
name = "picomap"
path = "src/picomap.rs"

[dependencies]
serde = {version = "1.0.145", features = ["derive"]} 
bincode = "1.2.1"
priority-queue = "1.3.0"
